Se agrega la funcionalidad de backups de eventos en ficheros.
1. El sistema al reiniciarce crea una nueva carpeta (si no existe ya) en /mnt/jffs2/backup/ y es ahi donde seran
   guardados los diferentes backups que se vallan creando.
2. Se escribio un nuevo proceso `backup` que es el encargado de, a media noche, volcar todos los eventos que se
   encuentren en la base de datos /mnt/jffs2/events.db a fichero. Este proceso crea un nuevo fichero con la fecha
   actual y la terminacion .bak en /mnt/jffs2/backup/ y volca todos los eventos a ese fichero.
3. El formato de los ficheros es el siguiente: events_yyyy_MM_dd.bak
4. El formato de la informacion en el fichero es la siguiente:
   sentido;identificador;fecha;sincronizado
   Notar que la primera linea que comienza con # es un comentario que define las columnas del fichero asi como el
   Timestamp de creacion del mismo para pruebas sobre la hora en que corre el proceso. Para parsear este fichero se
   debe ignorar la primera linea o todas las lineas que comiencen con #
5. Una vez volcados los eventos a fichero, el proceso procede a eliminar los eventos que ya han sido sincronizados
   en la base de datos /mnt/jffs2/events.db, esto para que la misma no crezca demasiado.
6. El proceso tambien se encarga de eliminar ficheros antiguos de /mnt/jffs2/backup. En app.ini se ha agregado una
   nueva configuracion (keepEvents=15) que define los dias que se mantienen los backups en el sistema, en este caso
   esta definido para 15 dias, entonces, el proceso se encarga de eliminar de /mnt/jffs2/backup/ los ficheros que
   sean mas antiguos que currentDateTime + keepEvents (en dias).
7. Como ahora el proceso `backup` se encarga de eliminar los eventos de la base de datos, se ha quitado la funcionalidad
   de eliminacion de los mismos dada una fecha dada.

--- a/FIRMWARE/bin/Resources/settings/app.ini
+++ b/FIRMWARE/bin/Resources/settings/app.ini
@@ -59,8 +59,8 @@ timerEnrolamiento=60000
 ; timer para el la cerrar la ventana de enrolamiento en el equipo (en milisegundos) (60000 = 1 minuto)
 timerCloseEnrollDialog=60000
 
-; tiempo en que se mantienen los eventos en la base de datos (en dias)
-timeEvents=15
+; tiempo en que se mantienen los backups de eventos, (en dias)
+keepEvents=15
 
 ; servicios web
 wsIP="192.168.1.120"
