--- a/SRC/tempo/Resources/settings/app.ini
+++ b/SRC/tempo/Resources/settings/app.ini
@@ -59,8 +59,8 @@ timerEnrolamiento=60000
 ; timer para el la cerrar la ventana de enrolamiento en el equipo (en milisegundos) (60000 = 1 minuto)
 timerCloseEnrollDialog=60000
 
-; tiempo en que se mantienen los eventos en la base de datos (en dias)
-timeEvents=15
+; tiempo en que se mantienen los backups de eventos, (en dias)
+keepEvents=15
 
 ; servicios web
 wsIP="192.168.1.120"
