La empresa ahora es GENERA S.A.
Viene en el app.ini por defecto y tambien se lee del Gen_Config.sql en caso de que se configure por la version
de la Eve.

--- a/FIRMWARE/bin/Resources/settings/app.ini
+++ b/FIRMWARE/bin/Resources/settings/app.ini
@@ -14,7 +14,7 @@ eventsDB="/mnt/jffs2/events.db"
 lang="es"
 
 ; empresa holding
-empresaHolding="Banco de Chile"
+empresaHolding="GENERA S.A"
 
 ; tipo de equipo
 tipoEquipo="ASISTENCIA"
@@ -87,4 +87,4 @@ key10=""
 
 
 ; version del firmware (FW-ddMMyyyy-00) [valor autogenerado]
-fwVersion = FW-15102014-00
+fwVersion = FW-16102014-00
