--- a/SRC/tempo/Resources/settings/app.ini
+++ b/SRC/tempo/Resources/settings/app.ini
@@ -14,7 +14,7 @@ eventsDB="/mnt/jffs2/events.db"
 lang="es"
 
 ; empresa holding
-empresaHolding="Banco de Chile"
+empresaHolding="GENERA S.A"
 
 ; tipo de equipo
 tipoEquipo="ASISTENCIA"
