Repo listo para comenzar el desarrollo del Snack10
* Elimina librerias para host, todo el desarrollo sera en el target
* Renombra LIB/idkit_target y LIB/vcom_target a LIB/idkit y LIB/vcom respectivamente
* Actualiza los *.pro para referenciar las nuevas librerias en LIB
* Actualiza codigo para eliminar el uso de HOST
* Cambia referencia a events.db por genera.db, la base de datos se llama genera.db ahora
* la nueva base de datos es ahora genera.db, no events.db
* cambio en .rcS file to change events.db to genera.db
* cambios para la nueva configuracion

--- a/SRC/tempo/Resources/settings/app.ini
+++ b/SRC/tempo/Resources/settings/app.ini
@@ -8,7 +8,7 @@
 iengineDB="/mnt/jffs2/iengine.db"
 
 ; ruta para la bd de eventos
-eventsDB="/mnt/jffs2/events.db"
+generaDB="/mnt/jffs2/genera.db"
 
 ; lenguaje (en = ingles, es = espannol)
 lang="es"
