Cambios en el snack que afectan la estructura completa del proyecto

--- a/SRC/app/Resources/settings/app.ini
+++ b/SRC/app/Resources/settings/app.ini
@@ -66,13 +66,13 @@ timerCloseEnrollDialog=60000
 keepEvents=15
 
 ; servicios web
-wsIP="192.168.1.120"
+wsIP="192.168.1.173"
 wsPort=8085
-wsCargaMasivaURL="http://192.168.1.120:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?WSDL"
-wsFirmwareUpdateURL="http://192.168.1.120:8085/WS_Update_Genera/UpdateLinea9.asmx"
-wsSincronizacionURL="http://192.168.1.120:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=SincronizacionMarcasM"
-wsVerificaPersonaURL="http://192.168.1.120:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=VerificaPersonaM"
-wsEnrollURL="http://192.168.1.120:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=enrollM"
-wsAlarmasURL="http://192.168.1.120:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=alarma"
+wsCargaMasivaURL="http://192.168.1.173:8085/WS_SNACK9_Genera/Snack9.asmx?op=getCargaMasivaM"
+wsFirmwareUpdateURL="http://192.168.1.173:8085/WS_Update_Genera/UpdateLinea9.asmx"
+wsSincronizacionURL="http://192.168.1.173:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=SincronizacionMarcasM"
+wsVerificaPersonaURL="http://192.168.1.173:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=VerificaPersonaM"
+wsEnrollURL="http://192.168.1.173:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=enrollM"
+wsAlarmasURL="http://192.168.1.173:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=alarma"
 wsNamespace="http://tempuri.org/"
 
