La hora se mantiene en el reloj del hardware

--- a/SRC/tempo/Resources/settings/app.ini
+++ b/SRC/tempo/Resources/settings/app.ini
@@ -14,7 +14,7 @@ generaDB="/mnt/jffs2/genera.db"
 lang="es"
 
 ; empresa holding
-empresaHolding="GENERA S.A"
+empresaHolding="Genera S.A"
 
 ; tipo de equipo
 tipoEquipo="ASISTENCIA"
