--- a/SRC/tempo/Resources/settings/app.ini
+++ b/SRC/tempo/Resources/settings/app.ini
@@ -4,6 +4,9 @@
 ; Es importante que en este fichero las llaves y los valores esten separados por
 ; = sin espacions, o sea: llave=valor (nunca poner llave = valor)
 
+; ntp: 200.54.149.19 (Genera) | 152.139.23.23 (Banco de Chile)
+ntpIP=200.54.149.19
+
 ; ruta para la bd de identificacion de idkit
 iengineDB="/mnt/jffs2/iengine.db"
 
@@ -72,16 +75,4 @@ wsVerificaPersonaURL="http://192.168.1.120:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?
 wsEnrollURL="http://192.168.1.120:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=enrollM"
 wsAlarmasURL="http://192.168.1.120:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=alarma"
 wsNamespace="http://tempuri.org/"
-
-; Estos valores son para uso futuro...
-key1=""
-key2=""
-key3=""
-key4=""
-key5=""
-key6=""
-key7=""
-key8=""
-key9=""
-key10=""
 
