--- a/SRC/app/Resources/settings/app.ini
+++ b/SRC/app/Resources/settings/app.ini
@@ -20,7 +20,7 @@ lang="es"
 empresaHolding="Genera S.A"
 
 ; tipo de equipo
-tipoEquipo="ASISTENCIA"
+tipoEquipo="COMEDOR"
 
 ; serial del equipo
 serialEquipo="K999999X999999999"
