corrige error ortografico en app.ini

--- a/SRC/app/Resources/settings/app.ini
+++ b/SRC/app/Resources/settings/app.ini
@@ -20,7 +20,7 @@ lang="es"
 empresaHolding="Genera S.A"
 
 ; tipo de equipo
-tipoEquipo="COMEDOR"
+tipoEquipo="ASISTENCIA"
 
 ; serial del equipo
 serialEquipo="K999999X999999999"
@@ -37,7 +37,7 @@ serieImpresora=""
 importDB="/mnt/jffs2/import.db"
 
 ; ruta donde se guarda el firmware nuevo
-fw="/mng/jffs2/firmware.tar.gz"
+fw="/mnt/jffs2/firmware.tar.gz"
 
 ; ruta donde se guarda el firmware MD5 nuevo
 fwMD5="/mnt/jffs2/firmware.tar.gz.md5"
@@ -70,7 +70,6 @@ wsIP="192.168.1.173"
 wsPort=8085
 wsCargaMasivaURL="http://192.168.1.173:8085/WS_SNACK9_Genera/Snack9.asmx?op=getCargaMasivaM"
 wsSincronizacionURL="http://192.168.1.173:8085/WS_SNACK9_Genera/Snack9.asmx?op=SincronizacionMarcasM"
-
 wsFirmwareUpdateURL="http://192.168.1.173:8085/WS_Update_Genera/UpdateLinea9.asmx"
 wsVerificaPersonaURL="http://192.168.1.173:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=VerificaPersonaM"
 wsEnrollURL="http://192.168.1.173:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=enrollM"
