app.ini se sobreescribe solo en rsC

--- a/SRC/app/Resources/settings/app.ini
+++ b/SRC/app/Resources/settings/app.ini
@@ -69,7 +69,8 @@ keepEvents=15
 wsIP="192.168.1.173"
 wsPort=8085
 wsFirmwareUpdateURL="http://192.168.1.173:8085/WS_Update_Genera/UpdateLinea9.asmx"
-wsCargaMasivaURL="http://192.168.1.173:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=getCargaMasivaM"
+; wsCargaMasivaURL="http://192.168.1.173:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=getCargaMasivaM"
+wsCargaMasivaURL="http://192.168.1.173:8085/WS_CargaMasiva_Genera/CargaMasiva.asmx?op=getCargaMasivaM"
 wsSincronizacionURL="http://192.168.1.173:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=SincronizacionMarcasM"
 wsVerificaPersonaURL="http://192.168.1.173:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=VerificaPersonaM"
 wsEnrollURL="http://192.168.1.173:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=enrollM"
