cambios para snack10

--- a/SRC/app/Resources/settings/app.ini
+++ b/SRC/app/Resources/settings/app.ini
@@ -20,10 +20,10 @@ lang="es"
 empresaHolding="Genera S.A"
 
 ; tipo de equipo
-tipoEquipo="ASISTENCIA"
+tipoEquipo="CASINO"
 
 ; serial del equipo
-serialEquipo="K999999X999999999"
+serialEquipo="K999999K999999999"
 
 ; identificador del equipo
 identificadorEquipo="001"
@@ -69,11 +69,10 @@ keepEvents=15
 wsIP="192.168.1.173"
 wsPort=8085
 wsFirmwareUpdateURL="http://192.168.1.173:8085/WS_Update_Genera/UpdateLinea9.asmx"
-; wsCargaMasivaURL="http://192.168.1.173:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=getCargaMasivaM"
-wsCargaMasivaURL="http://192.168.1.173:8085/WS_CargaMasiva_Genera/CargaMasiva.asmx?op=getCargaMasivaM"
-wsSincronizacionURL="http://192.168.1.173:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=SincronizacionMarcasM"
-wsVerificaPersonaURL="http://192.168.1.173:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=VerificaPersonaM"
-wsEnrollURL="http://192.168.1.173:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=enrollM"
-wsAlarmasURL="http://192.168.1.173:8085/WS_HORUS9_Genera/WS_HORUS9.asmx?op=alarma"
+wsCargaMasivaURL="http://192.168.1.173:8085/WS_SNACK9_Genera/SNACK9.asmx?op=getCargaMasivaM"
+wsSincronizacionURL="http://192.168.1.173:8085/WS_SNACK9_Genera/SNACK9.asmx?op=SincronizacionMarcasM"
+wsVerificaPersonaURL="http://192.168.1.173:8085/WS_SNACK9_Genera/SNACK9.asmx?op=VerificaPersonaM"
+wsEnrollURL="http://192.168.1.173:8085/WS_SNACK9_Genera/SNACK9.asmx?op=enrollM"
+wsAlarmasURL="http://192.168.1.173:8085/WS_SNACK9_Genera/SNACK9.asmx?op=alarma"
 wsNamespace="http://tempuri.org/"
 
