comienza desarollo para presencia

--- a/SRC/app/Resources/settings/app.ini
+++ b/SRC/app/Resources/settings/app.ini
@@ -65,6 +65,10 @@ timerCloseEnrollDialog=60000
 ; tiempo en que se mantienen los backups de eventos, (en dias)
 keepEvents=15
 
+; solo para el presencia, tipo de equipo: In => Entrada, Out => Salida
+presenciaType="In"
+; presenciaType="Out"
+
 ; servicios web
 wsIP="192.168.1.173"
 wsPort=8085
