adelantando en el presencia10

--- a/SRC/app/Resources/settings/app.ini
+++ b/SRC/app/Resources/settings/app.ini
@@ -1,4 +1,4 @@
-; Fichero de configuracion para TEMPO10
+; Fichero de configuracion para Linea10
 ; Este fichero se genera con la aplicacion ??? para cada proyecto
 ; Se lee inicializando el proyecto para configurarlo acorde
 ; Es importante que en este fichero las llaves y los valores esten separados por
@@ -20,7 +20,7 @@ lang="es"
 empresaHolding="Genera S.A"
 
 ; tipo de equipo
-tipoEquipo="CASINO"
+tipoEquipo="PRESENCIA"
 
 ; serial del equipo
 serialEquipo="K999999K999999999"
@@ -73,8 +73,8 @@ presenciaType="In"
 wsIP="192.168.1.173"
 wsPort=8085
 wsFirmwareUpdateURL="http://192.168.1.173:8085/WS_Update_Genera/UpdateLinea9.asmx"
-wsCargaMasivaURL="http://192.168.1.173:8085/WS_CargaMasiva_Genera/CargaMasiva.asmx?op=getCargaMasivaM"
-wsSincronizacionURL="http://192.168.1.173:8085/WS_SNACK9_Genera/SNACK9.asmx?op=SincronizacionMarcasM"
+wsCargaMasivaURL="http://192.168.1.173:8085/WS_PRESENCIA9_Test/WS_PRESENCIA9.asmx?op=getCargaMasivaM"
+wsSincronizacionURL="http://192.168.1.173:8085/WS_PRESENCIA9_Test/WS_PRESENCIA9.asmx?op=SincronizacionMarcasM"
 wsVerificaPersonaURL="http://192.168.1.173:8085/WS_SNACK9_Genera/SNACK9.asmx?op=VerificaPersonaM"
 wsEnrollURL="http://192.168.1.173:8085/WS_SNACK9_Genera/SNACK9.asmx?op=enrollM"
 wsAlarmasURL="http://192.168.1.173:8085/WS_SNACK9_Genera/SNACK9.asmx?op=alarma"
