avanza en el presencia10

--- a/SRC/app/Resources/settings/app.ini
+++ b/SRC/app/Resources/settings/app.ini
@@ -23,7 +23,7 @@ empresaHolding="Genera S.A"
 tipoEquipo="PRESENCIA"
 
 ; serial del equipo
-serialEquipo="K999999K999999999"
+serialEquipo="K888888P888888888"
 
 ; identificador del equipo
 identificadorEquipo="001"
