getting up to date...

--- a/SRC/app/Resources/settings/app.ini
+++ b/SRC/app/Resources/settings/app.ini
@@ -20,10 +20,10 @@ lang="es"
 empresaHolding="Genera S.A"
 
 ; tipo de equipo
-tipoEquipo="PRESENCIA"
+tipoEquipo="TEMPO"
 
 ; serial del equipo
-serialEquipo="K888888P888888888"
+serialEquipo="K888888K888888888"
 
 ; identificador del equipo
 identificadorEquipo="001"
@@ -73,8 +73,8 @@ presenciaType="In"
 wsIP="192.168.1.173"
 wsPort=8085
 wsFirmwareUpdateURL="http://192.168.1.173:8085/WS_Update_Genera/UpdateLinea9.asmx"
-wsCargaMasivaURL="http://192.168.1.173:8085/WS_PRESENCIA9_Test/WS_PRESENCIA9.asmx?op=getCargaMasivaM"
-wsSincronizacionURL="http://192.168.1.173:8085/WS_PRESENCIA9_Test/WS_PRESENCIA9.asmx?op=SincronizacionMarcasM"
+wsCargaMasivaURL="http://192.168.1.173:8085/WS_SNACK9_Test/WS_SNACK9.asmx?op=getCargaMasivaM"
+wsSincronizacionURL="http://192.168.1.173:8085/WS_SNACK9_Test/WS_SNACK9.asmx?op=SincronizacionMarcasM"
 wsVerificaPersonaURL="http://192.168.1.173:8085/WS_SNACK9_Genera/SNACK9.asmx?op=VerificaPersonaM"
 wsEnrollURL="http://192.168.1.173:8085/WS_SNACK9_Genera/SNACK9.asmx?op=enrollM"
 wsAlarmasURL="http://192.168.1.173:8085/WS_SNACK9_Genera/SNACK9.asmx?op=alarma"
